# gxde-editor

./: .gitignore  CMakeLists.txt  README.md  gxde-editor.desktop  install.pri  translate_src2ts.sh
.github/workflows/: sid-auto-builder.yml
debian/: changelog  control  gxde-editor.postinst  rules
gxedit/: CMakeLists.txt  main.cpp
src/: dtextedit.cpp  dtextedit.h  editwrapper.cpp  editwrapper.h  fileloadthread.cpp  findbar.cpp  findbar.h  gxde-editor.qrc  jumplinebar.cpp  linebar.h  main.cpp  replacebar.cpp  replacebar.h  settings.cpp  settings.h  startmanager.cpp  syntaxutils.cpp  syntaxutils.h  tabbar.cpp  tabbar.h  toolbar.cpp  utils.cpp  window.cpp  window.h
src/editor/: abstracteditor.h  editorfactory.cpp  editorfactory.h  editorlanguage.cpp  editorlanguage.h  legacytexteditor.cpp  legacytexteditor.h  scintillaeditor.cpp  scintillaeditor.h
src/markdown/: github-markdown-dark.css  github-markdown.css
src/resources/: settings.json
src/thememodule/: themeitemdelegate.cpp  themelistmodel.cpp  themepanel.cpp
src/themes/: atom_dark.theme  deepin.theme  deepin_dark.theme  solarized_dark.theme  solarized_light.theme
src/widgets/: bottombar.cpp  ddropdownmenu.cpp  markdownpreviewwidget.cpp  markdownpreviewwidget.h  toast.h
tests/: editorfactory_test.cpp  editorlanguage_test.cpp  syntaxutils_test.cpp  test_main.cpp
translations/: gxde-editor_ar.ts  gxde-editor_bg.ts  gxde-editor_ca.ts  gxde-editor_cs.ts  gxde-editor_da.ts  gxde-editor_de.ts  gxde-editor_es.ts  gxde-editor_es_419.ts  gxde-editor_fi.ts  gxde-editor_fr.ts  gxde-editor_hi_IN.ts  gxde-editor_hu.ts  gxde-editor_id.ts  gxde-editor_it.ts  gxde-editor_ja.ts  gxde-editor_ko.ts  gxde-editor_lt.ts  gxde-editor_ms.ts  gxde-editor_nb.ts  gxde-editor_ne.ts  gxde-editor_nl.ts  gxde-editor_pl.ts  gxde-editor_pt.ts  gxde-editor_pt_BR.ts  gxde-editor_ru.ts  gxde-editor_sk.ts  gxde-editor_sr.ts  gxde-editor_tr.ts  gxde-editor_uk.ts  gxde-editor_zh_CN.ts  gxde-editor_zh_TW.ts
